# omtb_ml

./: README.md
auto_label/: CMakeLists.txt  package.xml  setup.py
auto_label/launch/: create_coco.launch  delete.launch  save_pic.launch
auto_label/nodes/: create_coco.py  delete.py  respawn.py  save_pic.py
camera/camera_description/: CMakeLists.txt  package.xml
camera/camera_description/camera_description/: camera.gazebo.xacro  camera.urdf.xacro
camera/camera_gazebo/: CMakeLists.txt  package.xml
camera/camera_gazebo/launch/: empty_world.launch
camera/camera_gazebo/models/empty_room/: model.config  model.sdf
camera/camera_gazebo/worlds/: empty.world
camera/multi_camera_description/: CMakeLists.txt  package.xml
camera/multi_camera_description/multi_camera_description/: camera.gazebo.xacro  camera.urdf.xacro
semantic_mapping/: CMakeLists.txt  package.xml
semantic_mapping/config/: camera.cam  e2e_mask_rcnn_R-50-FPN_1x.yaml
semantic_mapping/launch/: camera.launch  infer.launch  mapping.launch
semantic_mapping/nodes/: category_name.py  infer.py
semantic_mapping/src/: mapping.cpp
semantic_pick/: CMakeLists.txt  package.xml  setup.py
semantic_pick/config/: e2e_mask_rcnn_R-50-FPN_1x.yaml
semantic_pick/launch/: env.launch  infer.launch  reconstruction.launch
semantic_pick/nodes/: category_name.py
semantic_pick/src/: picking.cpp  reconstruction.cpp
semantic_pick/srv/: MaskInfer.srv  ObjectPosition.srv
