<?xml version="1.0"?>
<package format="2">
  <name>semantic_pick</name>
  <version>1.0.0</version>
  <description>
    Pick a wood block from vision.
  </description>
  <license>Apache 2.0</license>
  <author email="dqszfuyu@163.com">Yu Fu</author>
  <author>Yu Fu</author>
  <maintainer email="dqszfuyu@163.com">Yu Fu</maintainer>
  <url type="repository">https://github.com/HITROS/omtb_ml</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>rosmsg</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>detectron</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>omtb_control</depend>
</package>
